--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "export": "next export",
+    "deploy": "gh-pages -d out",
+    "build-and-deploy": "npm run build && npm run export && npm run deploy"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
@@ -21,6 +24,8 @@
     "@tailwindcss/postcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.3.0",
+    "gh-pages": "^6.3.0",
     "tailwindcss": "^4"
   }
+ 
 }
